[package]
name = "polkadot-rs"
version = "0.1.0"
authors = ["Osuke Sudo <dish230@gmail.com>"]
edition = "2018"

[dependencies]
jsonrpc-core-client = { git = "https://github.com/paritytech/jsonrpc", rev = "ff4e20ecce6321835aab7a81cbb6fa2458a6082d"}
jsonrpc-derive = { git = "https://github.com/paritytech/jsonrpc", rev = "ff4e20ecce6321835aab7a81cbb6fa2458a6082d"}
jsonrpc-core = { git = "https://github.com/paritytech/jsonrpc", rev = "ff4e20ecce6321835aab7a81cbb6fa2458a6082d"}
log = "0.4"
futures = "0.1.26"
failure = "0.1"
ws = "0.7"
hex = "0.3"
serde = "1.0"
serde_json = "1.0"
serde_derive = "1.0"
byteorder = "1"
crossbeam = "0.7"
parity-codec = "3.2"

[dependencies.primitives]
git = 'https://github.com/osuketh/substrate.git'
package = 'substrate-primitives'
branch = "patch-zerochain"

[dependencies.runtime_primitives]
git = 'https://github.com/osuketh/substrate.git'
branch = "patch-zerochain"
package = "sr-primitives"

[dev-dependencies]
zprimitives = { package = "zerochain-primitives", git = "https://github.com/LayerXcom/zero-chain", branch = "feature/fix-zface" }
runtime = { package = "zerochain-runtime", git = "https://github.com/LayerXcom/zero-chain", branch = "feature/fix-zface" }
zjubjub = { package = "jubjub", git = "https://github.com/LayerXcom/zero-chain", branch = "feature/fix-zface" }
zpairing = { package = "zerochain-pairing", git = "https://github.com/LayerXcom/zero-chain", branch = "feature/fix-zface" }
system = { package = "srml-system", git = "https://github.com/LayerXcom/zero-chain", branch = "feature/fix-zface" }
encrypted-balances = { package = "encrypted-balances", git = "https://github.com/LayerXcom/zero-chain", branch = "feature/fix-zface" }
rand = "0.4"
hex-literal = '0.1'
